--- a/web/frontend/rl-angular-spa/src/app/components/lib/_account/premium-settings/premium-settings.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/lib/_account/premium-settings/premium-settings.component.html
@@ -2,23 +2,25 @@
 <p-divider></p-divider>
 <div class="flex gap-5 flex-column-reverse md:flex-row">
   <div class="flex-auto p-fluid">
-    <div *ngIf="paymentsStore.isLoading()" class="flex-none flex align-items-center justify-content-center mt-3">
-      <p-progressSpinner styleClass="w-4rem h-4rem"/>
-    </div>
-    <ng-container *ngIf="!paymentsStore.isLoading() && paymentsStore.subscriptions().activeSubscriptions.length === 0">
+    @if (paymentsStore.isLoading()) {
+      <div class="flex-none flex align-items-center justify-content-center mt-3">
+        <p-progressSpinner styleClass="w-4rem h-4rem"/>
+      </div>
+    }
+    @if (!paymentsStore.isLoading() && paymentsStore.subscriptions().activeSubscriptions.length === 0) {
       <div class="flex-none flex align-items-center justify-content-center mt-3">
         <h3>Currently No Active Subscriptions!</h3>
       </div>
-    </ng-container>
-    <ng-container *ngIf="!paymentsStore.isLoading() && paymentsStore.subscriptions().trial.isTrialActive">
+    }
+    @if (!paymentsStore.isLoading() && paymentsStore.subscriptions().trial.isTrialActive) {
       <div class="flex-none flex align-items-center justify-content-center mt-3">
         <h3>Free Trial Active Until:</h3>
       </div>
       <div class="flex-none flex align-items-center justify-content-center mt-1">
         <p>{{ formatDate(paymentsStore.subscriptions().trial.trialEndDate) }}</p>
       </div>
-    </ng-container>
-    <ng-container *ngIf="!paymentsStore.isLoading() && paymentsStore.subscriptions().activeSubscriptions.length > 0">
+    }
+    @if (!paymentsStore.isLoading() && paymentsStore.subscriptions().activeSubscriptions.length > 0) {
       <div class="flex-none flex align-items-center justify-content-center mt-3">
         <h3>Active Subscriptions:</h3>
       </div>
@@ -27,7 +29,7 @@
           <h4>Started: {{ formatDate(activeSubscription.createdAt) }}</h4>
         </div>
       }
-    </ng-container>
+    }
     <div class="flex-none flex align-items-center justify-content-center mt-3">
       <div class="max-w-10rem">
         <p-button
@@ -40,7 +42,7 @@
           pRipple
           severity="danger"
           type="submit"
-        />
+          />
       </div>
     </div>
   </div>
