--- a/web/frontend/rl-angular-spa/src/app/components/lib/_properties/reports-tab/reports-tab.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/lib/_properties/reports-tab/reports-tab.component.html
@@ -14,7 +14,7 @@
     dateFormat="mm/yy"
     id="datepicker"
     view="month"
-  />
+    />
 </div>
 <div class="flex-none flex align-items-center justify-content-center mt-4">
   <label for="state-filter">Filter by State</label>
@@ -28,24 +28,26 @@
     placeholder="Select States to Filter By"/>
 </div>
 
-<div *ngIf="!expensesStore.isLoading() && expensesStore.expensesForPropertyById().length === 0"
-     class="flex-none flex align-items-center justify-content-center mt-4">
-  <p>No Expenses for Selected Month</p>
-</div>
+@if (!expensesStore.isLoading() && expensesStore.expensesForPropertyById().length === 0) {
+  <div
+    class="flex-none flex align-items-center justify-content-center mt-4">
+    <p>No Expenses for Selected Month</p>
+  </div>
+}
 <div class="flex-none flex align-items-center justify-content-center mt-4">
   <div class="my-2 text-center">
     <p class="text-2xl underline">Household Expenses</p>
   </div>
 </div>
 <div class="flex-none flex align-items-center justify-content-center mt-2">
-  <ng-container *ngIf="expensesStore.isLoading()">
+  @if (expensesStore.isLoading()) {
     <div
       class="flex-none flex align-items-center justify-content-center mt-1"
-    >
+      >
       <mat-spinner diameter="80"/>
     </div>
-  </ng-container>
-  <ng-container *ngIf="!expensesStore.isLoading()">
+  }
+  @if (!expensesStore.isLoading()) {
     <div>
       <div class="my-4 text-center">
         Household
@@ -56,7 +58,7 @@
         Total: {{ expensesStore.getStateFilteredExpensesAmountPerTenantTotal(propertiesStore.propertyById(), convertSelectedExpenseFilters(selectedTotalExpenseFilters)) }}
       </div>
     </div>
-  </ng-container>
+  }
 </div>
 <div>
   <div class="my-2 text-center">
