--- a/web/frontend/rl-angular-spa/src/app/app.component.html
+++ b/web/frontend/rl-angular-spa/src/app/app.component.html
@@ -1,20 +1,25 @@
 <app-navbar (darkModeToggleEvent)="handleDarkModeToggleEvent($event)" (sideNavToggleEvent)="isSidebarVisible = $event"/>
-<app-update-or-maintenance-in-progress-message *ngIf="featureFlagsStore.isUpdateOrMaintenanceInProgress()"/>
-<ng-container *ngIf="publicApplicationMessage$ | async as publicMessages">
+@if (featureFlagsStore.isUpdateOrMaintenanceInProgress()) {
+  <app-update-or-maintenance-in-progress-message/>
+}
+@if (publicApplicationMessage$ | async; as publicMessages) {
   @for (publicMessage of publicMessages; track $index; ) {
-    <app-application-message
-      *ngIf="featureFlagsStore.isUpdateOrMaintenanceInProgress() === false &&
+    @if (featureFlagsStore.isUpdateOrMaintenanceInProgress() === false &&
       userAuthenticationStore.loggedInState() !== 'LOGGED_IN' &&
-      publicMessage.isShow"
-      [severity]="publicMessage.severity"
-      [message]="publicMessage.message"
-      [routerLink]="publicMessage.routerLink"
-      [routerLinkText]="publicMessage.routerLinkText"
-    />
+      publicMessage.isShow) {
+      <app-application-message
+        [severity]="publicMessage.severity"
+        [message]="publicMessage.message"
+        [routerLink]="publicMessage.routerLink"
+        [routerLinkText]="publicMessage.routerLinkText"
+        />
+    }
   }
-</ng-container>
-<app-free-trial-message
-  *ngIf="userAuthenticationStore.loggedInState() === 'LOGGED_IN' && paymentStore.paymentStatus() === 'TRIAL'"/>
+}
+@if (userAuthenticationStore.loggedInState() === 'LOGGED_IN' && paymentStore.paymentStatus() === 'TRIAL') {
+  <app-free-trial-message
+    />
+}
 <p-toast
   [hideTransitionOptions]="'300ms'"
   [showTransformOptions]="'translateY(100%)'"
@@ -22,7 +27,7 @@
   [showTransitionOptions]="'300ms'"
   key="general"
   position="bottom-right"
-/>
+  />
 <p-toast [baseZIndex]="5000" key="confirm" position="bottom-center">
   <ng-template let-message pTemplate="message">
     <div class="flex flex-column align-items-start" style="flex: 1">
@@ -39,14 +44,14 @@
   <ng-template pTemplate="headless">
     <div class="flex flex-column h-full">
       <div class="flex align-items-center justify-content-between px-4 pt-3 flex-shrink-0">
-                <span class="inline-flex align-items-center gap-2">
-                    <img alt="Logo" height="50" ngSrc="favicon.ico" width="50"/>
-                    <span class="font-semibold text-2xl text-primary">RoomyLedger</span>
-                </span>
+        <span class="inline-flex align-items-center gap-2">
+          <img alt="Logo" height="50" ngSrc="favicon.ico" width="50"/>
+          <span class="font-semibold text-2xl text-primary">RoomyLedger</span>
+        </span>
         <span>
-                    <p-button (onClick)="closeCallback($event)" icon="pi pi-times" outlined="true" rounded="true"
-                              styleClass="h-2rem w-2rem" type="button"></p-button>
-                </span>
+          <p-button (onClick)="closeCallback($event)" icon="pi pi-times" outlined="true" rounded="true"
+          styleClass="h-2rem w-2rem" type="button"></p-button>
+        </span>
       </div>
       <div class="overflow-y-auto">
         <ul class="list-none p-3 m-0">
@@ -59,7 +64,7 @@
               leaveToClass="hidden"
               pRipple
               pStyleClass="@next"
-            >
+              >
               <span class="font-medium">FAVORITES</span>
             </div>
             <ul class="list-none p-0 m-0 overflow-hidden">
@@ -97,13 +102,13 @@
                   pRipple>
                   <i class="pi pi-bell mr-2"></i>
                   <span class="font-medium">Notifications</span>
-                  <ng-container *ngIf="notificationsStore.unacknowledgedNotificationsCount() > 0">
+                  @if (notificationsStore.unacknowledgedNotificationsCount() > 0) {
                     <span class="inline-flex align-items-center justify-content-center ml-auto bg-primary border-circle"
-                          style="min-width: 1.5rem; height: 1.5rem">{{ notificationsStore.unacknowledgedNotificationsCount() }}</span>
-                  </ng-container>
+                    style="min-width: 1.5rem; height: 1.5rem">{{ notificationsStore.unacknowledgedNotificationsCount() }}</span>
+                  }
                 </a>
               </li>
-              <ng-container *ngIf="featureFlagsStore.isSignInWithAppleEnabled()">
+              @if (featureFlagsStore.isSignInWithAppleEnabled()) {
                 <div
                   class="p-3 flex align-items-center justify-content-between text-600 cursor-pointer p-ripple"
                   enterActiveClass="slidedown"
@@ -112,7 +117,7 @@
                   leaveToClass="hidden"
                   pRipple
                   pStyleClass="@next"
-                >
+                  >
                   <span class="font-medium">LEDGER SHORTCUTS</span>
                 </div>
                 <li>
@@ -126,7 +131,7 @@
                 <li>
                   <a
                     class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple"
-                  >
+                    >
                     <i class="pi pi-chart-line mr-2"></i>
                     <span class="font-medium">Reports</span>
                   </a>
@@ -147,7 +152,7 @@
                     <span class="font-medium">Calendar</span>
                   </a>
                 </li>
-              </ng-container>
+              }
             </ul>
           </li>
         </ul>
@@ -161,7 +166,7 @@
               leaveToClass="hidden"
               pRipple
               pStyleClass="@next"
-            >
+              >
               <span class="font-medium">SETTINGS</span>
             </div>
             <ul class="list-none p-0 m-0 overflow-hidden">
