--- a/web/frontend/rl-angular-spa/src/app/components/lib/_properties/controls-tab/controls-tab.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/lib/_properties/controls-tab/controls-tab.component.html
@@ -1,12 +1,11 @@
-<ng-container *ngIf="!currentUserIsAdmin">
+@if (!currentUserIsAdmin) {
   <div class="flex-none flex align-items-center justify-content-center mt-1">
     <p>You have limited permissions on this property</p>
   </div>
-</ng-container>
-<ng-container *ngIf="currentUserIsAdmin">
+}
+@if (currentUserIsAdmin) {
   <p-divider />
   <div class="flex-none flex align-items-center justify-content-center mt-1">
-
   </div>
   <p-divider />
   <div class="flex-none flex align-items-center justify-content-center mt-1">
@@ -14,6 +13,6 @@
       (click)="doDeleteProperty()"
       label="Delete Property"
       severity="danger"
-    />
+      />
   </div>
-</ng-container>
+}
