--- a/web/frontend/rl-angular-spa/src/app/components/lib/_users/email-login-overlay-panel/email-login-overlay-panel.component.html
+++ b/web/frontend/rl-angular-spa/src/app/components/lib/_users/email-login-overlay-panel/email-login-overlay-panel.component.html
@@ -25,8 +25,9 @@
         <div class="flex">
           <p-button
             [loading]="userAuthenticationStore.loggedInState() === 'LOADING'"
-            [disabled]="!featureFlagsStore.isSignInWithEmailEnabled()"
+            [disabled]="!isSignInWithEmailEnabled()"
             (click)="doEmailLoginOrSignUp()"
+            (keydown.enter)="doEmailLoginOrSignUp()"
             class="w-full"
             data-testid="email-login-button"
             type="submit"
